# crospint

./: .gitignore  CITATION.cff  LICENSE  README.md  init.sh  main.py  publish_nexus.sh  pyproject.toml
.github/workflows/: python-publish.yml  tests.yml
doc/: guide.md
notebooks/: model_training_and_evaluation.ipynb  outlier_removal_through_CTR.ipynb
src/: cwhpp.py
src/crospint/: __init__.py  interpolation.py
src/cwhpp/: __init__.py  cwhpp.py  housing_prices.py  interpolation.py
tests/: conftest.py  test_cwhpp.py  test_housing_prices.py  test_interpolation.py
