[project]
name = "cwhpp"
version = "0.3.15.dev4"
description = "Country Wide Housing Prices Predictions"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Olivier Meslin", email = "olivier.meslin@insee.fr" }
]
dependencies = [
    "lightgbm>=4.6.0",
    "polars>=1.33.1",
    "scikit-learn==1.7.2",
]


[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
