[project]
name = "crospint"
version = "0.1.6"
description = "Coordinate Rotation for Spatial Interpolation"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Olivier Meslin", email = "olivier.meslin@insee.fr" }
]
dependencies = [
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.1",
    "pandas>=2.3.0",
    "polars>=1.32.0",
    "pyarrow>=20.0.0",
    "scikit-learn==1.7.2",
]


[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
